the java 11 version of the examples